Adds loading gif to WMSLayer

--- a/js/gis/dijit/WMSLayer/templates/WMSLayer.html
+++ b/js/gis/dijit/WMSLayer/templates/WMSLayer.html
@@ -7,7 +7,7 @@
 
     <div id="wmsLayerLegend" data-dojo-attach-point="wmsLayerLegend" class="wmsLayerLegend"></div>
 
-    <div class="WMSLagerWidget1" align="center">
+    <div class="WMSLagerWidget1" align="center" data-dojo-attach-point="wmsLayerActionsContainer">
         <button data-dojo-attach-point="addButton"
                 data-dojo-props="iconClass:'addWMSLayerIcon',showLabel:true"
                 data-dojo-type="dijit/form/Button">${i18n.labels.add}
